//作成者:杉山
//プレイヤーのAnimatorのパラメータ名

public static class PlayerAnimatorParameterNameDictionary
{
    public static string walk = "IsWalking";//歩行
    public static string idle = "Idle";//待機
    public static string caught = "Caught";//捕まった
    public static string win = "Win";//勝利
    public static string lose = "Lose";//敗北
}
